iac/kubernetes/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-psql
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
