iac/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
